--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,18 @@
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/introHCI.css" rel="stylesheet">
 
-</script>        
+</script>  
+
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-92461077-2', 'auto');
+ga('send', 'pageview');
+
+</script>      
 </head>
 
 <body>
@@ -20,7 +31,10 @@
 		</div>
 
 		<h4>Projects</h4>
-		{{#each projects}}
+		{{#if min}}
+			Min! <button class="likeBtn">Like</button>
+		{{else}}
+			{{#each projects}}
 			<div class="project" id="{{id}}">
 				<div class="thumbnail">
 					<a href="/project/{{id}}">
@@ -31,11 +45,13 @@
 					<div class="details"></div>
 				</div>
 			</div>
-		{{/each}}
+			{{/each}}
+		{{/if}}
 
 
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
-	<script src="/js/introHCI.js"></script>
-</body>
-</html>
+		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src="/js/bootstrap.min.js"></script>
+		<script src="/js/introHCI.js"></script>
+
+	</body>
+	</html>
